# qzs

home/botfirst/: .env.prod  Googlelens_error_page.html  README.md  pic_search_cache  pyproject.toml
home/botfirst/accounts/3362948030/: config.yml  device.json  session.token
home/botfirst/accounts/3362948030/data/images/: 000135.ldb  000529.ldb  000531.ldb  000533.ldb  LOG  MANIFEST-000137
home/botfirst/accounts/3362948030/data/leveldb-v3/: 000164.ldb  000385.ldb  000386.ldb  000388.ldb  LOG  MANIFEST-000166
home/botfirst/accounts/3362948030/data/videos/: LOG
home/botfirst/accounts/3362948030/data/voices/: 2B07E2BA4F1C7D69707F46D1082145C1.amr  465A190751DF811D53D61F9CF7DE7277.amr  76ABA01F7AE3533E8FB7905BEA595D71.amr  772757055007D1F0AE805A36EBABFDF2.amr  77E20299CD0728A829D79D4F0CE99B2E.amr  7803D63CE597B0F264CB74F28F063826.amr  7C7C064331E843835B8D342592A5FF18.amr  7F91A6D98FAE1621D5C0358803C8D810.amr  8997847043CB54BD2A11F96DEE6D3DB4.amr  A126CD1969BA77A7407DE51C5200D39C.amr  A5F37782DF6DF2A3D97DCE077B8CFE8F.amr  B7E2E2D3282E25E495E3B545BA10AD77.amr  B97486EB24B16646FE162323A63E92EA.amr  BAFF7AE4A8ED8A62F3F92D8931A6215F.amr  C35928E81D428A3DC3BBC21FD1C76DB8.amr  D2857D9DA547F18718B2CD5D880D124E.amr  F48CB01A4A76A3CFA99C65CE5D34421A.amr
home/botfirst/accounts/binary/: accounts.json
home/botfirst/config/: naturel_gpt_config.yml
home/botfirst/data/: lolicon.db  setu_config.json
home/botfirst/data/naturel_gpt/: naturel_gpt.json
home/qingzhishang/: .bash_history  .bashrc  .profile  .viminfo
